focus al teclado

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <header class="titulo"><h1>Mi juego del Ahorcado</h1></header>
-  <body>
+  <body onclick="focus()">
     <div class="imagen">
       <img alt="img-ahorcado" id="imagen" />
     </div>
